# 3D-Climate-Unet

./: .gitignore  README.md  installer.py  pyproject.toml  requirements.txt
demos/: climate_visualizer.py
scripts/: converter.py  installer.py  test_model.py  train.py
src/: __init__.py  animator.py  config.py  dataset.py  model.py
src/models/: __init__.py  attention.py  blocks.py  embedding.py  unet.py
